<resources>
    <string name="app_name">My Player</string>
    <string name="concert">picture of a concert</string>
    <string name="pause">pause song</string>
    <string name="play">play song</string>
    <string name="stop">stop song</string>
    <string name="song_title_playAct">song title</string>
    <string name="song_artist_playAct">song artist</string>
    <string name="cardView_album_image">album image</string>
    <string name="cardView_song_title">song title</string>
    <string name="cardView_song_artist">artist</string>
</resources>