<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/card_bkgr_color"
    tools:context=".PlayActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="400dp"
        android:layout_height="500dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/concert"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_margin="40dp"
        android:background="@color/material_dynamic_neutral50">


        <ImageButton
            android:id="@+id/pause_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:background="@color/material_dynamic_neutral50"
            android:contentDescription="@string/pause"
            app:srcCompat="@android:drawable/ic_media_pause">

        </ImageButton>

        <ImageButton
            android:id="@+id/play_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:background="@color/material_dynamic_neutral50"
            android:contentDescription="@string/play"
            app:srcCompat="@android:drawable/ic_media_play">

        </ImageButton>

        <ImageButton
            android:id="@+id/stop_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:background="@color/material_dynamic_neutral50"
            android:contentDescription="@string/stop"
            app:srcCompat="@android:drawable/ic_delete">

        </ImageButton>

    </LinearLayout>
</RelativeLayout>