<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="#212121">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_cardView"
                android:contentDescription="@string/cardView_album_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/ic_launcher">
            </ImageView>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp">

                <TextView
                    android:id="@+id/song_title_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="bottom"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"
                    android:text="@string/cardView_song_title">

                </TextView>

                <TextView
                    android:id="@+id/song_artist_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#E0E0E0"
                    android:text="@string/cardView_song_artist">

                </TextView>
            </LinearLayout>


            <Button
                android:id="@+id/play_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="play"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="14dp">

            </Button>

        </LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>

